# webx-router

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  History.md  LICENSE  LICENSE.BSD  README.md  config.example.yml  config.yml
.github/workflows/: build-and-publish-deb.yml
debian-scripts/: webx-router.postinst  webx-router.prerm  webx-router.service
docker/: Dockerfile  Dockerfile.debian  Dockerfile.ubuntu
src/: app.rs  common.rs  connector.rs  inproc_communicator.rs  lib.rs  main.rs  message_bus.rs  process_communicator.rs  pub_sub_proxy.rs  publisher.rs  pull_push_proxy.rs
src/app/: app.rs  application.rs  cli.rs  mod.rs  server.rs
src/authentication/: authenticated_session.rs  authenticator.rs  credentials.rs  mod.rs
src/common/: engine.rs  engine_session.rs  engine_session_container.rs  error.rs  event_bus.rs  mod.rs  process_handle.rs  session.rs  session_container.rs  settings.rs  system.rs  user.rs  x11_session.rs
src/engine/: engine.rs  engine_communicator.rs  engine_connector.rs  engine_service.rs  engine_session.rs  engine_session_container.rs  engine_session_info.rs  engine_session_manager.rs  mod.rs  session_config.rs  session_creation_process.rs
src/fs/: mod.rs
src/router/: client_connector.rs  common.rs  engine_message_proxy.rs  instruction_proxy.rs  message_proxy.rs  mod.rs  relay_instruction_proxy.rs  session_connector.rs  session_proxy.rs  transport.rs
src/service/: engine_connector.rs  engine_service.rs  engine_session_manager.rs  engine_session_service.rs  engine_validator.rs  mod.rs  sesman_connector.rs  session_connector.rs  session_service.rs
src/sesman/: account.rs  mod.rs  process_handle.rs  screen_resolution.rs  x11_session.rs  x11_session_manager.rs  xorg_service.rs
src/utils/: event_bus.rs  mod.rs
