[package]
name = "webx-router"
description = "The WebX Router manages multiple WebX sessions, routing requests, instructions and messages between running WebX Engines and the WebX Relay."
readme = "README.md"
license-file = "LICENSE"
version = "0.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
env_logger = "0.9.0"
log = "0.4.14"
ctrlc = "3.2.1"
config = "0.11.0"
serde = {version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
signal-child = "1.0.3"
base64 = "0.13.0"
structopt = "0.3.25"
serde_json = "1.0.74"
hex = "0.4.3"

[package.metadata.deb]
maintainer = "Stuart Caunt <caunt@ill.fr>"
copyright = "2022, Institut Laue Langevin"
license-file = ["LICENSE", "0"]
extended-description = ""
depends = "$auto"
section = "net"
priority = "optional"
maintainer-scripts = "./debian-scripts"
systemd-units = {}
conf-files = ["/etc/webx/webx-router-config.yml"]
assets = [
    ["target/release/webx-router", "usr/bin/", "755"],
    ["config.yml", "/etc/webx/webx-router-config.yml", "644"]
]
