[package]
name = "webx-router"
description = "The WebX Router manages multiple WebX sessions, routing requests, instructions and messages between running WebX Engines and the WebX Relay."
readme = "README.md"
license-file = "LICENSE"
version = "0.0.0-dev"
edition = "2021"

[dependencies]
zmq = "0.9"
chrono = "0.4"
fern = "0.7"
log = "0.4"
ctrlc = "3.4"
config = "0.15"
serde = {version = "1.0", features = ["derive"] }
dotenv = "0.15"
uuid = { version = "1.13", features = ["serde", "v4"] }
base64 = "0.22"
structopt = "0.3"
serde_json = "1.0"
hex = "0.4"
libc = "0.2"
rand = "0.9"
users = "0.11"
nix = { version = "0.29", features = ["user"] }
pam-client2 = "0.5"
shared_child = "1.0"
rpassword = "7.3"

[package.metadata.deb]
maintainer = "Stuart Caunt <caunt@ill.fr>"
copyright = "2022, Institut Laue Langevin"
license-file = ["LICENSE", "0"]
extended-description = ""
depends = "$auto"
section = "net"
priority = "optional"
maintainer-scripts = "./debian-scripts"
systemd-units = {}
conf-files = ["/etc/webx/webx-router-config.yml", "/etc/webx/startwm.sh"]
assets = [
    ["target/release/webx-router", "usr/bin/", "755"],
    ["config.example.yml", "/etc/webx/webx-router-config.yml", "644"],
    ["bin/pam-webx", "/etc/pam.d/webx", "644"],
    ["bin/startwm.sh", "/etc/webx/startwm.sh", "755"],
]
